force-app/main/default/objects/GoogleDriveFile__c/GoogleDriveFile__c.object-meta.xml
<CustomObject>
    <label>GoogleDriveFile</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GoogleDriveFiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>