force-app/main/default/objects/GoogleDriveFile__c/fields/DownloadLink__c.field-meta.xml
<CustomField>
    <fullName>DownloadLink__c</fullName>
    <label>DownloadLink</label>
    <type>Url</type>
</CustomField>