force-app/main/default/objects/GoogleDriveFile__c/fields/Google_Drivefolder_id__c.field-meta.xml
<CustomField>
    <fullName>Google_Drivefolder_id__c</fullName>
    <label>Google_Drivefolder_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>