force-app/main/default/objects/GoogleDriveFile__c/fields/GoogleDrive_ID__c.field-meta.xml
<CustomField>
    <fullName>GoogleDrive_ID__c</fullName>
    <label>GoogleDrive_ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>