force-app/main/default/objects/GoogleDriveFile__c/fields/Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Preview_Link__c</fullName>
    <label>Preview Link</label>
    <type>Url</type>
</CustomField>