force-app/main/default/objects/GoogleDriveFile__c/fields/ThumbnailLink__c.field-meta.xml
<CustomField>
    <fullName>ThumbnailLink__c</fullName>
    <label>ThumbnailLink</label>
    <type>Url</type>
</CustomField>