force-app/main/default/objects/GoogleDriveFile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Preview_Link__c</columns>
    <columns>Contact__c</columns>
    <columns>DownloadLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>